[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/utils/soundmanager.gd" type="Script" id=1]
[ext_resource path="res://assets/music/Esper_MENU.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/music/Esper_MAIN.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/music/Esper_BOSS.mp3" type="AudioStream" id=4]

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"
